# server-shared

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build-schema.sh  build.rs
schema/: game.capnp  main.capnp  shared.capnp  srvc.capnp
src/: config.rs  constants.rs  data.rs  encoding.rs  hmac_signer.rs  lib.rs  logging.rs  multi_color.rs  schema.rs  session_id.rs  token_issuer.rs  typemap.rs  user_settings.rs
src/encoding/: allocators.rs  mod.rs
src/events/: builtins.rs  mod.rs  rate_limiter.rs
