[package]
name = "server-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
capnp = { version = "0.21.2", default-features = false, features = [
    "unaligned",
    "std",
] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }
tracing-subscriber = "0.3.19"
toml = "0.9.2"
base64 = "0.22.1"
qunet = { git = "https://github.com/dankmeme01/qunet", rev = "7646570e", default-features = false }
thiserror = "2.0.12"
blake3 = "1.8.2"
heapless = "0.8.0"
hex = "0.4.3"
hmac = "0.12.1"


[build-dependencies]
capnpc = "0.21.1"

[features]
default = []
main = []
game = []
srvc = []
all = ["main", "game", "srvc"]
