[package]
name = "server-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
capnp = { version = "0.21.2", default-features = false, features = [
    "unaligned",
    "std",
] }
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }
tracing-subscriber = "0.3.19"
toml = "0.9.2"
base64 = "0.22.1"
qunet = { git = "https://github.com/dankmeme01/qunet", rev = "1c0e775", default-features = false }
thiserror = "2.0.12"
blake3 = "1.8.2"
heapless = "0.8.0"
hex = "0.4.3"
hmac = "0.12.1"
console-subscriber = { version = "0.4.1", features = [
    "parking_lot",
], optional = true }
parking_lot = { version = "0.12.4", features = ["hardware-lock-elision"] }
smallvec = "1.15.1"


[build-dependencies]
capnpc = "0.21.1"

[features]
default = []
main = []
game = []
srvc = []
all = ["main", "game", "srvc", "quic"]
quic = ["qunet/quic"]
qunet-client = ["qunet/client"]
tokio_tracing = ["dep:console-subscriber"]
