[package]
name = "server-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
capnp = { git = "https://github.com/dankmeme01/capnproto-rust", rev = "dbc9778", default-features = false, features = [
    "unaligned",
    "std",
    "alloc",
    "sync_reader",
] }
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-appender = { version = "0.2.4", features = ["parking_lot"] }
tracing-subscriber = "0.3.22"
toml = "1.0.3"
base64 = "0.22.1"
qunet = { git = "https://github.com/dankmeme01/qunet", rev = "e1d8518", default-features = false }
thiserror = "2.0.18"
blake3 = "1.8.3"
heapless = "0.9.2"
hex = "0.4.3"
hmac = "0.12.1"
console-subscriber = { version = "0.5.0", features = [
    "parking_lot",
], optional = true }
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision"] }
smallvec = "1.15.1"

[build-dependencies]
capnpc = "0.25.0"

[features]
default = []
main = []
game = []
srvc = []
all = ["main", "game", "srvc", "quic"]
quic = ["qunet/quic"]
qunet-client = ["qunet/client"]
tokio_tracing = ["dep:console-subscriber"]
